@@ -1,3 +1,4 @@
+* #4909 do not resume source in write (erikos)
 * #4909 do not resume downloaded files (erikos)
 
 74
